<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="9"
        android:columnCount="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="@string/tituloMainActivity"
            android:gravity="center"
            android:paddingTop="40sp"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="200sp"
            android:layout_height="0sp"
            android:textColor="@color/darkGray"
            android:textSize="15sp"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="@string/subTituloMainActivity"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_rowWeight="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            android:textSize="20sp"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="@string/opcionIngresoMXN"
            android:gravity="center"
            android:layout_rowWeight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/salario"
            android:layout_width="350sp"
            android:layout_height="45sp"
            android:layout_rowWeight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/darkGray"
            android:textSize="20sp"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/libre_baskerville_regular"
            android:hint="@string/opcionIngresoMXNinput"
            android:inputType="numberDecimal"
            android:maxLength="11"
            android:background="@color/WhiteDark"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/darkGray"
                android:textSize="20sp"
                android:paddingTop="30sp"
                android:fontFamily="@font/libre_baskerville_bold"
                android:text="@string/opcionTipoISR"
                android:gravity="center"
                android:layout_rowWeight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350sp"
            android:layout_height="45sp"
            android:layout_gravity="center"
            android:layout_marginTop="15sp"
            android:orientation="vertical"
            android:gravity="center">
            <Spinner
                android:id="@+id/opcionesISR"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:fontFamily="@font/libre_baskerville_regular"
                android:gravity="center"
                android:background="@color/WhiteDark"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="3"
            android:layout_gravity="center_horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:background="@drawable/button_border"
                android:text="@string/btnCalcular"/>

        </LinearLayout>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>