<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReporteCalculos">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="20"
        android:columnCount="2">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        android:columnCount="2"
        android:rowCount="1">
        <TextView
            android:layout_width="200sp"
            android:layout_height="25sp"
            android:layout_gravity="end"
            android:gravity="center"
            android:textColor="@color/darkGray"
            android:text="@string/tablas"
            android:fontFamily="@font/libre_baskerville_bold"/>
        <ImageButton
            android:id="@+id/btnInfo"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_marginRight="35sp"
            android:contentDescription="@string/btnInfo"
            android:src="@drawable/info_button"
            android:background="?attr/selectableItemBackground"
            android:scaleType="centerCrop"/>
    </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="35sp"
            android:text="@string/tituloReporteCalculos"
            android:fontFamily="@font/libre_baskerville_bold"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"/>

        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="25sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/ingreso"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/ingreso"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>
        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/limite"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/limite"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>

        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/diferencia"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/diferencia"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>
        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/tasa"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/tasa"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>
        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/impuestoMarginal"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/impuestoMarginal"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>

        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/cuota"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/cuota"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>
        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/impuestoRetener"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/impuestoISR"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>
        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/percepcion"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/percepcion"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>
        <GridLayout
            android:layout_width="330sp"
            android:layout_marginTop="8sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:rowCount="2"
            android:columnCount="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:gravity="center"
                android:text="@string/subEmpleo"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="@font/libre_baskerville_bold"/>

            <TextView
                android:id="@+id/subEmpleo"
                android:layout_width="wrap_content"
                android:layout_height="35sp"
                android:layout_gravity="end"
                android:text="0.0"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:fontFamily="@font/libre_baskerville_bold"/>
            <View
                android:layout_width="330sp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:layout_columnSpan="2"
                android:background="@color/WhiteDark"/>
        </GridLayout>

        <LinearLayout
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="3"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:contentDescription="@string/contentDescrip"
                android:src="@drawable/return_button"
                android:background="?attr/selectableItemBackground"
                android:scaleType="centerCrop"/>

        </LinearLayout>

    </GridLayout>




</LinearLayout>