<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".TablasScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="310sp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darkGray"
            android:textSize="35sp"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="@string/tablasUsadas"
            android:gravity="center"
            android:paddingBottom="30sp"
            android:paddingTop="40sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_diaria"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginBottom="0dp"
            android:paddingBottom="70sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_sub_diaria"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_marginBottom="0dp"
            android:paddingBottom="70sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_semanal"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_sub_semanal"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_decenal"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_sub_decenal"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_quincenal"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_sub_quincenal"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_mensual"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tabla_isr_sub_mensual"
            android:contentDescription="@string/tabla"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:paddingBottom="70sp"/>

        <TextView
            android:id="@+id/press"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/mustard"
            android:textSize="20sp"
            android:fontFamily="@font/libre_baskerville_bold"
            android:text="@string/consulta"
            android:gravity="center"
            android:paddingBottom="20sp"
            android:paddingTop="40sp"
            android:clickable="true"
            android:focusable="true"/>

    </LinearLayout>
</ScrollView>
